# needforheat-dutch-weather-software

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_weather.py
dutch_weather/: __init__.py  weather_interpolate.py
src/nfh_dutch_weather/: weather.py
weather/: api.py  geo_interpolate.py  knmi.py
