[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "needforheat-dutch-weather-software"
version = "0.1.0"
packages = ["dutch_weather"]
description = "Retrieve and interpolate KNMI hourly weather data to arbitrary Dutch locations."
authors = [
  { name="Henri ter Hofte", email="henri.terhofte@outlook.com" }
]


license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.9"


dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "requests>=2.31,<3",
    "tqdm>=4.66,<5"
]

[project.urls]
Homepage = "https://github.com/energietransitie/needforheat-dutch-weather-software"
Issues = "https://github.com/energietransitie/needforheat-dutch-weather-software/issues"
